[gd_scene load_steps=9 format=3 uid="uid://bndf2m1bxxetr"]

[ext_resource type="Script" path="res://Sound/RandomSFXPlayer.gd" id="1_8ry7e"]
[ext_resource type="Script" path="res://Actors/MovingPlatform/platform_trigger.gd" id="1_itaw3"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_ms3tf"]
points = PackedVector2Array(-7, -5, 7, -5, 12, 1, -12, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqlif"]
size = Vector2(16, 10)

[sub_resource type="Animation" id="Animation_bkvm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Polygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(10, -5, 10, 1, -10, 1, -10, -5)]
}

[sub_resource type="Animation" id="Animation_oheci"]
resource_name = "down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Polygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(10, -5, 10, 1, -10, 1, -10, -5), PackedVector2Array(10, -5, 10, -3, -10, -3, -10, -5)]
}

[sub_resource type="Animation" id="Animation_m06j2"]
resource_name = "up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatableBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/Polygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(10, -5, 10, -3, -10, -3, -10, -5), PackedVector2Array(10, -5, 10, 1, -10, 1, -10, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpuja"]
_data = {
"RESET": SubResource("Animation_bkvm5"),
"down": SubResource("Animation_oheci"),
"up": SubResource("Animation_m06j2")
}

[node name="PlatformTrigger" type="Node2D"]
script = ExtResource("1_itaw3")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("ConvexPolygonShape2D_ms3tf")

[node name="Polygon2D" type="Polygon2D" parent="AnimatableBody2D"]
color = Color(0.780392, 0.545098, 0.309804, 1)
polygon = PackedVector2Array(10, -5, 10, 1, -10, 1, -10, -5)

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
color = Color(0.240614, 0.0174136, 0.115677, 1)
polygon = PackedVector2Array(16, -1, 16, 3, -16, 3, -16, -1)

[node name="TriggerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea2D"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_tqlif")

[node name="RandomSFXPlayer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_8ry7e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_dpuja")
}
autoplay = "RESET"

[connection signal="body_entered" from="TriggerArea2D" to="." method="_on_trigger_area_2d_body_entered"]
[connection signal="body_exited" from="TriggerArea2D" to="." method="_on_trigger_area_2d_body_exited"]
